# TheLibrary

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile
api/app/: main.py
api/app/dependencies/: container.py
api/app/routers/: books.py  llm.py  reviews.py  users.py
api/app/schemas/: book.py  review.py  user.py
core/: main.py
core/domain/entities/: book.py
core/domain/value_objects/: author.py  base.py  book_id.py  rating.py  ratings_count.py  release_year.py  title.py
core/src/thelibrary/: main.py
core/src/thelibrary/exceptions/: domain_exceptions.py
infrastructure/llm/: README.md  __init__.py  contracts.py  personalization.py  personalization_contracts.py  schemas.py
infrastructure/llm/catalog_data/: books_40.faiss  books_40.faiss.meta.json  books_40.json
infrastructure/llm/scripts/: build_faiss_index.py
infrastructure/llm/transports/: langchain_chat_openai.py
infrastructure/repositories/in_memory/: __init__.py  book_repository.py  review_repository.py  user_repository.py
llm_module/: README.md  __init__.py  api.py  contracts.py  exceptions.py  parsing.py  personalization.py  ports.py  prompting.py  service.py
llm_module/catalog_data/: books_40.faiss.meta.json
llm_module/logging/: __init__.py  repositories.py
llm_module/providers/: __init__.py  list_based_provider.py
llm_module/scripts/: build_faiss_index.py
llm_module/transports/: __init__.py  langchain_chat_openai.py  ollama_chat.py  openai_responses.py
src/thelibrary/: main.py
(+62 files in other folders)
